# omni-kit-mcp

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
examples/: isaaclab_bridge_launch.py
examples/demo_tools/: __init__.py
exts/omni.kit.mcp.panel/config/: extension.toml
exts/omni.kit.mcp.panel/docs/: CHANGELOG.md  README.md
exts/omni.kit.mcp.panel/omni_kit_mcp_panel/: __init__.py  extension.py
exts/omni.kit.mcp/config/: extension.toml
exts/omni.kit.mcp/docs/: CHANGELOG.md  README.md
exts/omni.kit.mcp/omni_kit_mcp/: __init__.py  autoload.py  bridge.py  builtins.py  extension.py  knobs.py  protocol.py
kit_mcp/: __init__.py  client.py  server.py
scripts/: install.py
tests/: conftest.py  test_autoload.py  test_bridge.py  test_client.py  test_gateway_refresh.py  test_knobs.py  test_protocol.py
