[project]
name = "kit-mcp"
version = "0.1.0"
description = "Generic MCP server + Kit socket bridge for Omniverse Kit / Isaac Sim"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

# LLM-facing MCP server entry point (the TCP client to the Kit bridge).
# The Kit-side socket server lives in exts/omni.kit.mcp/ and is loaded by Kit, not pip.
[project.scripts]
kit-mcp = "kit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kit_mcp"]
